# oneClickAgent

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README.zh.md
.opencode/agents/: auditor.md
agent/: AGENTS.md  Dockerfile  Dockerfile.camoufox  Dockerfile.dev  Dockerfile.vnc  pyproject.toml
agent/iagent_agent/: __main__.py  browser_login.py  server.py  workspace.py
agent/iagent_agent/adapter/: brain_opencode.py  brain_stub.py  protocol.py
agent/iagent_agent/browser/: __init__.py  manager.py
agent/iagent_agent/runtime/: context.py  executor.py
agent/iagent_agent/skills/: loader.py
agent/skills/default/: SKILL.md
agent/skills/xiaohongshu-login/: SKILL.md
agent/tests/: test_brain_opencode.py  test_server.py
agent/vnc/: entrypoint.sh
deploy/: .env.example
deploy/cloud/: docker-compose.yml
deploy/device/: iagent-device.service
device/: .gitignore  llm_provider.example.json  pyproject.toml
device/iagent_device/: __main__.py  config.py
device/iagent_device/agentclient/: client.py
device/iagent_device/creds/: relay.py
device/iagent_device/docker/: manager.py  reconcile.py
device/iagent_device/files/: puller.py  stager.py
device/iagent_device/jobs/: callback_server.py  dispatcher.py  models.py
device/iagent_device/monitor/: monitor.py
device/iagent_device/skills/: manager.py
device/iagent_device/store/: connection.py  repositories.py
device/iagent_device/tunnel/: client.py  codec.py  outbox.py
device/iagent_device/vncbridge/: bridge.py
device/tests/: conftest.py  test_codec.py  test_cred_relay.py  test_dispatcher.py  test_docker_manager.py  test_monitor.py  test_outbox.py  test_skill_manager.py  test_stager.py  test_tunnel_client.py  test_vnc_bridge.py
device/tests/e2e/: conftest.py  mock_gateway.py  test_e2e_device.py
docs/audit/: 01-backbone-audit.md  02-cloud-gateway.md  03-local-device.md  04-agent-container.md  05-tunnel-protocol.md  06-data-model.md  07-api.md  08-auth-security.md  09-web-ui.md  10-device-cloud-communication.md  11-tunnel-reliability.md  README.md
docs/braionstorm/: goal.md
docs/dev/: 012-return-path-and-interactive-fixes.md  02-cloud-gateway.md  03-local-device.md  04-agent-container.md  05-tunnel-protocol.md  06-data-model.md  08-auth-security.md  09-web-ui.md
docs/opt/: 2026-06-10_zip_output_and_markdown_summary.md  browser-ready-signal.md
gateway/: Dockerfile  go.mod  go.sum
web/: .env.production  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  (+4 more)
(+160 files in other folders)
